--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-firebase/analytics": "^11.0.0",
+    "@react-native-firebase/app": "^11.0.0",
+    "@react-native-firebase/crashlytics": "^11.0.0",
+    "@react-native-firebase/perf": "^11.0.0",
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/drawer": "^5.12.4",
     "@react-navigation/native": "^5.9.3",
